# simplied-blockchain-rust

./: .gitignore  Cargo.toml  README.md
src/: block.rs  blockchain.rs  main.rs  utils.rs
