[package]
name = "simplied-blockchain-rust"
version = "0.1.0"
edition = "2024"
authors = ["Sam Xie <samxie52@gmail.com>"]
description = "A simple blockchain implementation in Rust with Proof of Work consensus"
license = "MIT"
repository = "https://github.com/samxie52/simplied-blockchain-rust"
keywords = ["blockchain", "cryptocurrency", "proof-of-work", "rust", "mining"]
categories = ["cryptography", "data-structures"]


[dependencies]
sha2 = "0.10.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
colored = "3.0.0"
anyhow = "1.0.76"
log = "0.4.20"
env_logger = "0.11.8"

[dev-dependencies]
tempfile ="3.8.1"

[[bin]]
name = "blockchain"
path ="src/main.rs"